macros/tests/ui/unknown_sql_table_struct_key_table.stderr
error: Unknown sql struct attribute `table` Supported struct attributes for Table: table_name,drivers,version,no_version,version_test,unique_id.
 --> tests/ui/unknown_sql_table_struct_key_table.rs:4:7
  |
4 | #[sql(table = "users")]
  |       ^^^^^
